flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 4
  selector:
    matchLabels:
      name: flask-app
  template:
    metadata:
      labels:
        name: flask-app
    spec:
      containers:
      - name: myapp
        image: ankimittal/k8-1
        ports:
        - containerPort: 30017
