servicepy.yaml
apiVersion: v1
kind: Service
metadata: 
     name: flash-app-test
spec:
   selector: 
       name: flask-app-test
   type: LoadBalancer    
   externalIPs: 
    - 192.168.1.11
   ports: 
      - protocol: TCP
        targetPort: 30017
        port: 30017
