ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pywebapp-test.com
    http:
       paths:
       - backend:
            service:
                serviceName: k8sapp
                port:
                    number: 5001
